# highlight

./: '  .all-contributorsrc  .cursorrules  .dockerignore  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .graphqlrc.json  .ignore  .markdown-link-check.json  .mega-linter.yml  .npmignore  .nvmrc  .prettierignore  .prettierrc  .reflame.config.jsonc  .yarnrc.yml  :w  @  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_ONBOARDING.md  Dockerfile  Dockerfile.local  Dockerfile.prod  LICENSE  Procfile  README.md  SECURITY.md  \  amplify.yml  buildspec.yml  content.json  cypress.config.js  go.work  go.work.sum  graphql.config.js  (+15 more)
.cursor/: rules
e2e/openllmetry/: main.py  pyproject.toml
e2e/python/: .gitignore  Dockerfile  pyproject.toml
e2e/python/highlight_azure/: requirements.txt
e2e/python/highlight_django/: db.sqlite3  manage.py
e2e/python/highlight_django/highlight_django/: settings.py  wsgi.py
e2e/python/highlight_django/polls/: views.py
e2e/python/highlight_fastapi/: logger.py  main.py  main_2.py  work.py
e2e/python/highlight_flask/: app.py  database.py
e2e/python/highlight_gcp/: hello_http.py
e2e/python/highlight_justpy/: main.py
e2e/python/highlight_justpy/components/: highlight.js
e2e/python/highlight_kafka/: README.md  kafka.mjs  kafka.py  package.json
e2e/python/highlight_loguru/: main.py
e2e/python/highlight_openai/: main.py
e2e/python/highlight_script/: background.py  kafka.py  main.py  thread.py
e2e/python/setuptools/: pyproject.toml
e2e/tests/: conftest.py  pyproject.toml  pytest.ini  test_oauth_graphql.py  test_sdk.py
e2e/tests/src/: app_runner.py  conftest.py  fetch_session_events.py  query_gql.py  test_aurora.py  test_auth.py  test_cypress.py  test_oauth_graphql.py  test_sdk.py  util.py
scripts/: build_local_container.sh  bundle-size-enforcer.py  compare.py  compare_stripe.py  createDemoOrg.sql  db-prod-access.sh  db-render-access.sh  delete_logs.py  dev-all.mjs  docs-scraper.ts  fetch_prod_session.py  get_github_security.py  load_kafka_message.py  logo.scm  migrate-blog-tags.ts  package.json  pyproject.toml  read_session_metadata.py  reflame-check.sh  remove_uncompressed.py  requirements.txt  scrape_icons.py  test_remove_uncompressed.py  update_ecs_service.py  upload.ts  yalc-install.sh  yalc-uninstall.sh
scripts/migrations/: billing_at_workspace.sql  daily_sessions_view.sql  email_fields.sql  environment_error_field.sql  environment_error_field_to_group.sql  error-counts-merge-duplicates.sql  error_tags.sql  init.sql  projects_to_workspaces.sql  reporting.sql  set_dashboard_is_default.sql  truncate_error_events.sql  truncate_session_fields.sql
scripts/passwordReplacer/: crawler.py  remove_passwords.py  replace_files.py
scripts/passwordReplacer/Brotli-1.0.9.dist-info/: METADATA  RECORD  WHEEL
sdk/highlight-py/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdk/highlight-py/e2e/highlight_aws/: lambda_function.py
sdk/highlight-py/e2e/highlight_azure/: requirements.txt
sdk/highlight-py/e2e/highlight_azure/HttpExample/: __init__.py  function.json
sdk/highlight-py/e2e/highlight_azure/HttpTrigger/: __init__.py  function.json
sdk/highlight-py/e2e/highlight_django/highlight_django/: settings.py  urls.py
sdk/highlight-py/e2e/highlight_django/polls/: apps.py  views.py
sdk/highlight-py/e2e/highlight_fastapi/: main.py  work.py
sdk/highlight-py/e2e/highlight_flask/: app.py  models.py
sdk/highlight-py/e2e/highlight_gcp/: hello_http.py
sdk/highlight-py/e2e/highlight_loguru/: main.py
sdk/highlight-py/e2e/highlight_oauth/: main.py
sdk/highlight-py/e2e/highlight_script/: main.py
sdk/highlight-py/examples/: app.py  script.py
sdk/highlight-py/examples/HighlightAzureExample/: function_app.py  host.json
sdk/highlight-py/examples/azure/: fn.py  getting_started.md  host.json  requirements.txt
sdk/highlight-py/examples/azure/HttpTrigger/: __init__.py  function.json
sdk/highlight-py/examples/highlight_django/highlight_django/: asgi.py  settings.py  urls.py
sdk/highlight-py/examples/highlight_django/polls/: urls.py
sdk/highlight-py/highlight_io/: __init__.py  highlight.py  sdk.py
sdk/highlight-py/highlight_io/integrations/: __init__.py  all.py  anthropic.py  aws.py  azure.py  bedrock.py  boto.py  boto3.py  boto3sqs.py  celery.py  chromadb.py  cohere.py  django.py  fastapi.py  flask.py  gcp.py  haystack.py  langchain.py  llamaindex.py  openai.py  pinecone.py  qdrant.py  redis.py  replicate.py  requests.py  serverless.py  sqlalchemy.py  transformers.py  vertexai.py  watsonx.py  weaviate.py
sdk/highlight-py/highlight_io/utils/: dict.py  lru_cache.py  utils.py
sdk/highlight-py/tests/: __init__.py  test_aws.py  test_azure.py  test_boto.py  test_boto3sqs.py  test_celery.py  test_django.py  test_fastapi.py  test_flask.py  test_gcp.py  test_loguru.py  test_redis.py  test_requests.py  test_sdk.py  test_sqlalchemy.py  test_utils.py  test_utils_dict.py
sdk/highlight-rust/: .gitignore  Cargo.toml  README.md
sdk/highlight-rust/highlightio/: Cargo.toml  README.md
sdk/highlight-rust/highlightio-actix/: Cargo.toml
sdk/highlight-rust/highlightio-actix/examples/hello-world/: Cargo.toml  README.md
sdk/highlight-rust/highlightio-actix/examples/hello-world/src/: main.rs
sdk/highlight-rust/highlightio-actix/src/: lib.rs
sdk/highlight-rust/highlightio/examples/sync/: Cargo.toml  README.md
sdk/highlight-rust/highlightio/examples/sync/src/: main.rs
sdk/highlight-rust/highlightio/examples/tokio/: Cargo.toml  README.md
sdk/highlight-rust/highlightio/examples/tokio-current-thread/: Cargo.toml  README.md
sdk/highlight-rust/highlightio/examples/tokio-current-thread/src/: main.rs
sdk/highlight-rust/highlightio/src/: error.rs  lib.rs
sdk/highlight-rust/src/: lib.rs  main.rs
sdk/highlight-rust/src/sdk/: highlight.rs  logger.rs  mod.rs
sdk/highlight-rust/src/sdk/common/: attributes.rs  meta.rs  mod.rs  options.rs  routes.rs  severity.rs
sdk/highlight-rust/tests/: logs.rs
sdk/highlight-rust/tests/collector/: Dockerfile  otel-collector.yaml  run-collector.sh
(+7139 files in other folders)
