[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Vadim Korolik <vkorolik@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = {version = ">=1.23,<2.0", extras = ["crt"]}
brotli = ">=1.0,<2.0"
tqdm = "^4.66.3"
stripe = "^6.7.0"
clickhouse-connect = "^0.7.8"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest-mock = "^3.11.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
