[tool.poetry]
name = "highlight-e2e"
version = "0.1.0"
description = ""
authors = ["Vadim Korolik <vkorolik@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "^1.19.0"
blinker = "^1.8.1"
boto = "^2.49.0"
boto3 = "^1.34.98"
celery = "^5.4.0"
django = "^5.0.8"
fastapi = "^0"
flask = "^3.0.3"
functions-framework = "^3.5.0"
loguru = "^0"
openai = "^1.25.1"
redis = "^5.0.4"
sqlalchemy = "^2.0.29"
orjson = "3.9.15"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
highlight-io = {path = "../../sdk/highlight-py", develop = true}
urllib3 = "2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"
pytest-asyncio = "^0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
