[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Vadim Korolik <vkorolik@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
black = "^24.3.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-randomly = "^3.15.0"
python = "^3.10"
requests = "^2.32.2"
semver = "^3.0.2"
brotli = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
