[tool.poetry]
name = "highlight-io"
version = "0.8.5"
description = "Session replay and error monitoring: stop guessing why bugs happen!"
license = "Apache-2.0"
authors = [
    "Vadim Korolik <vadim@highlight.io>",
    "Jay Khatri <jay@highlight.io>",
    "Spencer Amarantides <spencer@highlight.io>",
]
readme = "README.md"
homepage = "https://www.highlight.io"
repository = "https://github.com/highlight/highlight"
documentation = "https://www.highlight.io/docs"
keywords = [
    "web",
    "framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring"
]
packages = [{ include = "highlight_io" }]

[tool.poetry.dependencies]
python = ">=3.9,<4"
opentelemetry-api = "^1.25.0"
opentelemetry-distro = "^0.46b0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-instrumentation = "^0.46b0"
opentelemetry-proto = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-anthropic = "^0.25.3"
opentelemetry-instrumentation-bedrock = "^0.25.3"
opentelemetry-instrumentation-boto = "^0.46b0"
opentelemetry-instrumentation-boto3sqs = "^0.46b0"
opentelemetry-instrumentation-celery = "^0.46b0"
opentelemetry-instrumentation-chromadb = "^0.25.3"
opentelemetry-instrumentation-cohere = "^0.25.3"
opentelemetry-instrumentation-haystack = "^0.25.3"
opentelemetry-instrumentation-langchain = "^0.25.3"
opentelemetry-instrumentation-llamaindex = "^0.25.3"
opentelemetry-instrumentation-logging = "^0.46b0"
opentelemetry-instrumentation-openai = "^0.25.3"
opentelemetry-instrumentation-pinecone = "^0.25.3"
opentelemetry-instrumentation-qdrant = "^0.25.3"
opentelemetry-instrumentation-redis = "^0.46b0"
opentelemetry-instrumentation-replicate = "^0.25.3"
opentelemetry-instrumentation-requests = "^0.46b0"
opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
opentelemetry-instrumentation-transformers = "^0.25.3"
opentelemetry-instrumentation-vertexai = "^0.25.3"
opentelemetry-instrumentation-watsonx = "^0.25.3"
opentelemetry-instrumentation-weaviate = "^0.25.3"
urllib3 = "^2.2.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
azure-functions = "^1"
black = "^24"
blinker = "^1"
django = "^4"
fastapi = "^0"
flask = "^3"
functions-framework = "^3"
loguru = "^0"
orjson = "3.9.15"
pytest = "^8"
pytest-asyncio = "^0"
pytest-cov = "^5"
pytest-mock = "^3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
