[workspace]
members = [
    "highlightio",
    "highlightio/examples/sync",
]
resolver = "2"

[workspace.dependencies]
opentelemetry = "0.21"
opentelemetry-appender-tracing = "0.2"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
opentelemetry-semantic-conventions = "0.13"
tracing-subscriber = "0.3"
