[workspace]
members = [
    "highlightio",
    "highlightio/examples/sync",
    "highlightio/examples/tokio",
]
resolver = "2"

[workspace.dependencies]
opentelemetry = "0.21"
opentelemetry-appender-tracing = "0.2"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
opentelemetry-semantic-conventions = "0.13"
tokio = "1"
tracing-subscriber = { version = "0.3", default-features = false }
log = "0.4"
