[workspace]
members = [
    "highlightio",
    "highlightio-actix",
]
resolver = "2"

[workspace.dependencies]
actix-web = { version = "4", default-features = false }
futures-util = "0.3"
opentelemetry = "0.21"
opentelemetry-appender-tracing = "0.2"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = "0.21"
opentelemetry-semantic-conventions = "0.13"
tokio = "1"
tracing-subscriber = { version = "0.3", default-features = false }
log = "0.4"
