[package]
name = "highlightio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio = ["opentelemetry_sdk/rt-tokio", "opentelemetry-otlp/tokio", "opentelemetry-otlp/reqwest-client"]
tokio-current-thread = ["opentelemetry_sdk/rt-tokio-current-thread", "opentelemetry-otlp/reqwest-client"]
async-std = ["opentelemetry_sdk/rt-async-std", "opentelemetry-otlp/surf-client"]

[dependencies]
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry_sdk = { workspace = true, features = ["logs"] }
opentelemetry-otlp = { workspace = true, default-features = false, features = ["logs", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }

tracing-subscriber = { workspace = true, default-features = false, features = ["registry", "std"] }

hyper-native-tls = "0.3"
thiserror = "1"
