[package]
name = "highlightio-actix-example-hello-world"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
actix-web = { workspace = true, default-features = true }
log = { workspace = true }
highlightio-actix = { path = "../../" }
